# WallpaperChanger

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  TODO.md  main.py  pyproject.toml
.github/: CONTRIBUTING.md  CONTRIBUTING.tr.md
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: configuration.md  dev.md  todo.md  troubleshooting.md
src/: cli.py  config.py  config_loader.py  init_config.py  state.py  state_manager.py  validate_config.py  wallpaper.py
tests/: conftest.py  test_cli.py  test_config.py  test_state.py  test_wallpaper.py
tests/integration/: __init__.py  test_round_robin.py  test_wallpaper_with_state.py
tests/unit/: test_config_loader.py  test_display.py  test_image_selection.py  test_logging.py  test_state_manager.py
