[project]
name = "wallpaperchanger"
version = "0.3.0-alpha"
maintainers = [{ name = "Cyber-Syntax" }]
license = { text = "GPL-3.0-or-later" }
description = "Automatically sets wallpapers on Linux using feh (X11) or swaybg (Wayland)."
requires-python = ">= 3.12"

readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "Environment :: Console",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
]

[project.scripts]
wallpaperchanger = "src.cli:run"
wallpaperchanger-init = "src.cli:init_config"
wallpaperchanger-validate = "src.cli:validate_config"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "pip-review>=1.3.0",
  "pytest-asyncio>=0.22.0",
  "aioresponses>=0.7.8",
  "ruff>=0.19.0",
]

[build-system]
requires = ["setuptools>=79", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.coverage.paths]
source = ["wallpaper"]

[tool.pytest.ini_options]
minversion = "8.3.4"
addopts = ["-r a -q -v --strict-markers"]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = [".", "src"]

[tool.ruff]
include = ["pyproject.toml"]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
  "__init__.py",
]

line-length = 79
indent-width = 4

[tool.ruff.format]

# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings.
docstring-code-format = false

# set the line length limit used when formatting code snippets in
# docstrings.
docstring-code-line-length = "dynamic"

[tool.ruff.lint]

extend-select = ["E501", "D"] # pydocstyle for line-length

fixable = ["ALL"]

select = [
  "E",   # pycodestyle (error)
  "D",   # test pycodestyle
  "F",   # pyflakes
  "B",   # bugbear
  "B9",
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "I",   # isort
  "UP",  # pyupgrade
  "PIE", # flake8-pie
  "PGH", # pygrep-hooks
  "PYI", # flake8-pyi
  "W",   # pycodestyle warnings
  "PL",  # pylint
  "RUF", # ruff-specific rules
]

ignore = [
  # only relevant if you run a script with `python -0`,
  # which seems unlikely for any of the scripts in this repo
  "B011",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 79

[tool.coverage.run]
source = ["wallpaper"]
omit = ["tests/*", "scripts/*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
